Remove use of apache commons libraries from cluster-controller modules